fix vh on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,3 @@
-.App {
-  text-align: center;
-  background-color: #2D2D2D;
-  color: rgba(255, 255, 255, 0.96);
-
-
-}
-
 .header__logo {
   height: 80px;
   width: 80px;
