--- a/src/components/game.css
+++ b/src/components/game.css
@@ -2,9 +2,7 @@
     text-align: center;
     background-color: #2D2D2D;
     color: rgba(255, 255, 255, 0.96);
-    
-    height: 100%;
-
+    height: 100vh;
     display: flex;
     flex-direction: column;
 }
@@ -14,7 +12,13 @@
         flex-direction: row;
     }
 }
-
+  /* Avoid Chrome to see Safari hack */
+  @supports (-webkit-touch-callout: none) {
+    .app {
+      /* The hack for Safari */
+      height: -webkit-fill-available;
+    }
+  }
 .header {
     background: rgb(27, 27, 27);
 
@@ -120,7 +124,7 @@
 
 .mastermind2 {
 
-    height: 3.2rem;
+    height: 3.4rem;
     background-color: #1B1B1B;
     border-radius: 12px;   
     padding: 1rem;
@@ -139,7 +143,7 @@
 
 .mastermind3{
 
-    height: 3.2rem;
+    height: 3.4rem;
     border-radius: 12px;   
     padding: 1rem;
 
@@ -231,7 +235,7 @@
   .mastermind__template {
    
     width: 100%;
-    height: 3.2rem;
+    height: 3.4rem;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -338,10 +342,10 @@
   }
 
   .circle__help--black{
-      background-color: rgb(0, 0, 0);
+      background: black;
       padding: 0.4rem;
       
-      box-shadow: 0rem 0rem 0.1rem white;
+      border:1px solid white;
   }
 
   .circle__help--white{
